  MixedSlab Components have been altered to permit this. User provided
  components should work as they currently do, but probably have to be
  rewritten to permit energy dispersive operation.
  For energy dispersive operation classes that inherit Scatterer should
  override the newly introduced Scatterer.complex() method.

0.1.28
------
- add name="refnx" to pyproject.toml.

0.1.29
------
- Don't pickle the manual_beam_finder.
- Fixed a bug when inserting a Component into a Stack in the refnx GUI. If
  it was appended to the end of the Stack Component addition worked.
  Inserting a Component into the middle of the Stack appeared to put it in the
  correct place in the GUI, but inserted it in the wrong place in the
  Structure.
- Added Lagrangian multipliers to GlobalObjective, allowing the user to
  modulate the contribution of individual log-likelihoods to the whole. This
  may be of use when co-refining Neutron/X-ray/Ellipsometry datasets.

0.1.30
------
- First appearance of Parameter.set_constraint().
- Previously Parameter constraints were limited to algebraic Python
  expressions. Now Parameter.set_constraint can be given a callable which
  is evaluated at runtime, allowing more sophisticated constraints to be
  developed. (N.B this is separate to the inequality constraints that can
  be made during curvefitting using the NonLinearConstraint machinery).
- Add a Parratt recursion for calculating reflectivity, it seems to be a
  little faster.
- Ported the pymc wrapper from pymc3 --> pymc (v4), which was released in
  Jun2022.
- added sequence_to_parameters function.
- added LipidLeaflet.make_constraint.

0.1.31
------
- Amend setup.py package discovery
- Change the manual beam finder box to green
- When a Parameters object contains a _UnaryOp or _BinaryOp the dependencies
  of those objects are queried for varying parameters when asking for
  Parameters.varying_parameters()

0.1.32
-------
- event mode reduction for SPZ