@@ -1,6 +1,7 @@
 import pickle
 import numpy as np
 
+from refnx.reflect import MixedReflectModel
 from .graphproperties import GraphProperties
 
 
@@ -52,7 +53,10 @@ class DataObject:
     @property
     def sld_profile(self):
         try:
-            return self.model.structure.sld_profile(max_delta_z=1.0)
+            if isinstance(self.model, MixedReflectModel):
+                return self.model.structures[0].sld_profile(max_delta_z=1.0)
+            else:
+                return self.model.structure.sld_profile(max_delta_z=1.0)
         except AttributeError:
             # if self.model is None, or if self.model doesn't have a structure
             # (e.g. MixedReflectModel)
