@@ -455,3 +455,4 @@ in 0.1.13.
 0.1.32
 -------
 - event mode reduction for SPZ
+- Display SLD profile for first structure in MixedReflectModel
